# gj

./: Cargo.toml  README.md
.codex/environments/: environment.toml
docs/: design_doc.md
src/: config.rs  git.rs  hooks.rs  lib.rs  main.rs  state.rs
src/cmd/: cd.rs  checkout.rs  exit.rs  init.rs  list.rs  mod.rs  new.rs  pr.rs  shell_init.rs
