[package]
name = "gj"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for managing temporary git worktree environments"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shellexpand = "3.1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.14"
